tests/pass/run/native_runtime_bool_bridge/main.kira
@Runtime
struct FlagBox {
    var value: Bool
}

@Runtime
function setFlag(box: borrow mut FlagBox) {
    box.value = true
    return
}

@Native
function readFlag(box: borrow FlagBox) -> Bool {
    return box.value
}

@Main
@Native
function main() {
    var box = FlagBox { value: false }
    setFlag(box)
    print(readFlag(box))
    return
}
